# glhf

./: .gitignore  CMakeLists.txt  Makefile  README.md  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
assets/: CMakeLists.txt
assets/objects/: cube.glb
assets/shaders/: anim.vert  anim_tbn.vert  inst.vert  object.frag  object.vert  object_normal.frag  screen.vert  texture.frag
examples/: CMakeLists.txt  hello_cube.cpp  hello_dancer.cpp  hello_image.cpp  hello_triangle.cpp
include/glhf/: animation.h  bdf.h  camera.h  collection.h  color.h  framebuffer.h  gltf.h  instance_factory.h  json.h  log.h  mesh.h  node.h  opengl.h  predicate.h  primitive.h  primitive_descriptor.h  shader.h  skin.h  texture.h  time.h  timer.h  trs.h  uniform.h  uniformbuffer.h  window.h
src/: animation.cpp  camera.cpp  collection.cpp  color.cpp  framebuffer.cpp  gltf.cpp  json.cpp  mesh.cpp  node.cpp  shader.cpp  skin.cpp  texture.cpp  time.cpp  timer.cpp  trs.cpp  uniform.cpp  uniformbuffer.cpp  window.cpp
tests/: CMakeLists.txt
tests/src/: test_gltf.cpp  test_json.cpp
tools/: CMakeLists.txt  Makefile
tools/embed/: CMakeLists.txt  embed.cpp  embed.h
web/: shell_minimal.html
